# geoclue-provider-libqmi

./: CMakeLists.txt  README.md  geoclue-libqmi.provider  geoclue-provider-libqmi.c  org.freedesktop.Geoclue.Providers.Qmi.service
